k8s/catalogo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogo-service
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: catalogo-service
    app.kubernetes.io/part-of: ecommerce-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: catalogo-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: catalogo-service
        app.kubernetes.io/part-of: ecommerce-microservices
    spec:
      containers:
        - name: catalogo-service
          image: ghcr.io/ale96glz/microservices-ecommerce/catalogo-service:1.0.3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8082
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 36
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
