k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: ecommerce-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: ecommerce-microservices
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: provisioning
              mountPath: /etc/grafana/provisioning
      volumes:
        - name: provisioning
          configMap:
            name: grafana-provisioning
