k8s/kafka-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/part-of: ecommerce-microservices
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kafka
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafka
        app.kubernetes.io/part-of: ecommerce-microservices
    spec:
      containers:
        - name: kafka
          image: bitnamilegacy/kafka:3.7.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: internal
              containerPort: 29092
            - name: external
              containerPort: 9092
            - name: controller
              containerPort: 9093
          readinessProbe:
            exec:
              command:
                - bash
                - -c
                - (exec 3<>/dev/tcp/127.0.0.1/29092) 2>/dev/null
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - (exec 3<>/dev/tcp/127.0.0.1/29092) 2>/dev/null
            initialDelaySeconds: 40
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 12
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka
      volumes:
        - name: kafka-data
          emptyDir: {}
