k8s/catalogo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogo-service
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: catalogo-service
    app.kubernetes.io/part-of: ecommerce-microservices
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: catalogo-service
  ports:
    - name: http
      port: 8082
      targetPort: http
