k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/part-of: ecommerce-microservices
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: kafka
  ports:
    - name: internal
      port: 29092
      targetPort: 29092
    - name: external
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
