k8s/notificaciones-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notificaciones-service
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: notificaciones-service
    app.kubernetes.io/part-of: ecommerce-microservices
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notificaciones-service
  ports:
    - name: http
      port: 8085
      targetPort: http
