k8s/pedidos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pedidos-service
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: pedidos-service
    app.kubernetes.io/part-of: ecommerce-microservices
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pedidos-service
  ports:
    - name: http
      port: 8083
      targetPort: http
