k8s/zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: zipkin
    app.kubernetes.io/part-of: ecommerce-microservices
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zipkin
  ports:
    - name: http
      port: 9411
      targetPort: http
